public/style.css
:root {
  --table-color: #15314B;
  --dark-mode-text: rgb(51, 51, 51);
  --main-bg: #121212;
  --surface: #1E1E1E;
  --on-hover: #7a7a7a;
  --text-color: #E0E0E0;
  --border: 8px;
}

html {
  height: 100%;
  margin: 0;
  user-select: none;
  font-family: Helvetica Neue, Calibri, Arial, sans-serif;
  color: var(--text-color);
}

body {
  overflow: hidden;
  height: 100%;
  margin: 0;
  display: flex;
  flex: 1;
  flex-direction: column;
}

.main {
  display: flex;
  background-color: var(--main-bg);
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.nav {
  height: 0%;
  display: flex;
  background-color: var(--surface);
  box-shadow: 0 7px 9px -2px rgba(0,0,0,.9);
}

.nav-item {
  display: inline-flex;
  align-items: center;
  padding: 15px;
  font-size: 16px;
  letter-spacing: .05em;
}

.github-logo {
  margin-top: .5em;
  color: #fff;
}

.nav a:hover{
  background-color: var(--on-hover);
  transition: background-color 150ms ease-in;
  cursor: pointer;
}

.logo-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 25%;
  width: 25%;
  background-color: #141414;
  border-radius: 25px;
  z-index: 999;
  -webkit-box-shadow: 0px 0px 78px -27px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 0px 78px -27px rgba(0,0,0,0.75);
  box-shadow: 0px 0px 78px -27px rgba(0,0,0,0.75);
}

.table-wrapper {
  position: absolute;
  transform: translate(-100%, -2px);
  z-index: 10;
  width: 30%;
  height: 30%;
  overflow: auto;
}

.tableVisible {
  opacity: 1;
}

.tableTransparent {
  opacity: 0.1;
}

#dp-container::-webkit-scrollbar-track {
	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	background-color: #F5F5F5;
}

.toggle-table-visibilty {
  position: absolute;
  top: 10px;
  left: 10px;
  font-weight: bold;
  color: black;
  padding: 0 10px 0 10px;
  background-color: #D3D3D3;
  border-radius: 5px;
  z-index: 10000;
}

#dp-container::-webkit-scrollbar {
	width: 12px;
	background-color: #F5F5F5;
}

#dp-container::-webkit-scrollbar-thumb {
	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
	background-color: #15314B;
}

.hamiltonianTable {
  background-color: white;
  color: black;
  border-collapse: collapse;
  font-size: 1.2em;
  border-radius: 5px 5px 0 0;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}

th {
  position: sticky;
  top: 0; /* Don't forget this, required for the stickiness */
  background-color: #15314B;

}

.hamiltonianTable thead tr {
  background-color: #15314B;
  color: white;
  text-align: left;
  font-weight: bold;
}

.hamiltonianTable th,
.hamiltonianTable td {
    padding: 12px 15px;
}

.hamiltonianTable tbody tr {
  border-bottom: 1px solid lightgray;
}

.hamiltonianTable tbody tr:nth-of-type(even) {
  background-color: #f3f3f3;
}

.hamiltonianTable tbody tr:last-of-type {
  border-bottom: 4px solid var(--table-color);
}

.subtitle {
  text-align: center;
  font-style: italic;
  font-size: 24px;
  opacity: 85%;
}

.sidebar {
  display: flex;
  flex-direction: column;
  flex: 1;
  overflow: auto;
  width: 30%;
  height: 100%;
  background-color: var(--surface);
  margin-right: 1em;
  border-radius: var(--border);
}

.progress-bar-container {
  margin-top: auto;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.progress-bar-container:first-child {
  background-color: 'yellow';
}

.progress-bar-container:last-child {
  background-color: 'blue';
}

.progress-item {
  border-right: 2px solid white;
  background: #e2e2e2;
  height: 40%;
}

.progress-item-active {
  border-width: 0 1px;
  border-color: #fff;
  background: #43e063;
  height: 40%;
  opacity: 75%;
}

.custom-container {
  display: flex;
  justify-content: space-evenly;
}

.custom-nice-tree-container {
  height: 95%;
  width: 100%;
  padding: 1em;
}

.custom-control-area {
  height: 5%;
  width: 100%;
  padding: 0 1em 1em 1em;
}

#custom-nice-tree {
  width: 100%;
  height: 100%;
  background-color: var(--surface);
  border-radius: var(--border);
}

.progress-item:hover {
  height: 60%;
  transition: height 100ms ease-in;
  cursor: pointer;
}

.nav-buttons-container {
  display: flex;
  text-align: center;
  justify-content: space-between;
  margin-top: auto
}

#arrow {
  stroke: rgb(51, 51, 51);
  fill: rgb(51, 51, 51);
}

.material-icons.nav-arrows {
  font-size: 40px;
  color: #828282;
  z-index: 10000;
}

.material-icons.nav-arrows:hover {
  color: orange; 
  cursor: pointer;
}

#app-area {
  position: relative;
  width: 70%;
  height: 100%
}

#container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 90%;
  background-color: var(--surface);
  border-radius: var(--border);
}

#output {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  height: 10%;
  font-size: 14px;
  padding: 15px;
}

#max-output {
  height: 50%;
}

#separator-output {
  height: 50%;
}

#center-container {
  display: flex;
  height: 100%;
  width: 100%;
  padding: 1em;
}

h2 {
  font-size: 30px;
}

.dragLine.hidden {
  stroke-width: 0;
}

.dragLine {
  stroke: #333;
  stroke-width: 3px;
}

.graph-classes {
  display: flex;
  flex-direction: column;
}

.graph-class {
  flex: 1;
  border: 1px solid red;
}

strong {
  font-weight: 1000;
}

.table {
  width: auto;
  z-index: 1000;
  background-color: white;
  color: rgb(51, 51, 51);
  position: absolute;
  /* border: 3.5px solid rgb(51, 51, 51); */
  padding: 15px;
  transform: translate(-100%, -2px);
}

.table td {
  padding: 0 25px;
}

.red {
  color: red;
}

.green {
  color: green;
}

.blue {
  color: blue;
}

.sets:hover {
  cursor: pointer;
  background-color: orange;
  user-select: none;
}

td {
  user-select: none;
}

.not-drawing {
  cursor: default;
}

.creating-link {
  cursor: pointer;
}
/* ... */

